Configuration cache support (#54)
* Configuration cache support

* Update gradle in GHA

* Set spotless line endings so it works with cc

* Fix line endings on windows